--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express-handlebars": "^8.0.1",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "6.15"
+    "mongodb": "6.15",
+    "nodemailer": "^7.0.2"
   }
 }
